# casino_games

./: .gitignore  CMakeLists.txt  Casino.cpp  Casino.h  CasinoGameInterface.h  CoinGame.cpp  CoinGame.h  ControllerInterface.cpp  ControllerInterface.h  DesignDocs.md  Driver.cpp  MainDriver.cpp  Player.cpp  Player.h  README.md  package-lock.json  package.json
.github/workflows/: cmake-multi-platform.yml
CoinFlip/: CoinGame.cpp  CoinGame.h
Mines/: MinesDriver.cpp
Mines/Controller/: MinesController.cpp  MinesController.h
Mines/Model/: MinesModel.cpp  MinesModel.h
Mines/View/: MinesView.cpp  MinesView.h
Player/: Player.cpp  Player.h
Roulette/: Driver.cpp  RouletteDriver.cpp  RouletteFrontendTests.cpp
Roulette/Controller/: RouletteController.cpp  RouletteController.h
Roulette/Model/: BettingTable.cpp  BettingTable.h  BettingTableTests.cpp  RouletteWheel.cpp  RouletteWheel.h  main
Roulette/View/: RouletteView.cpp  RouletteView.h
Tests/: FrontendRouletteTests.cpp  MinesTests.cpp  RouletteTests.cpp
back_end/: CMakeLists.txt  Casino.cpp  Casino.h  CasinoGameInterface.cpp  CasinoGameInterface.h  CasinoInterface.cpp  CoinGame.cpp  Driver.cpp  Mines.cpp  Mines.h  MinesController.cpp  MinesController.h  MinesView.cpp  MinesView.h  Player.cpp  Player.h  crow_all.h
public/: index.html
public/css/: style.css
src/: App.js  Buttons.css  Coin.css  GameRoom.css  HomePage.css  index.js  minesRoom.css  setUpProxy.js
src/Components/: CoinFlip.js  Footer.js  GameRoom.js  Header.js  Home.js  Mines.js  ReturnButton.js  Roulette.css  Roulette.js
src/Components/chips/: Chips.css  Chips.js
src/Components/table/: BettingTable.css  BettingTable.js
src/Components/table/rows/: ColumnLeft.json  ColumnRight.json  FifthRow.json  FirstBorder.json  FirstRow.json  FourthRow.json  SecondBorder.json  SecondRow.json  ThirdBorder.json  ThirdRow.json
src/pages/: Coinflip.js  Gameroom.js  Homepage.js  MinesPage.js  Roulette.js
uWebSockets/: Broadcast  BroadcastingEchoServer  Crc32  EchoServer  HelloWorld  HelloWorldThreaded  Http3Server  ParameterRoutes  ServerName  UpgradeAsync  UpgradeSync  build
